fixes buttons not being clickable on ie

--- a/wp-content/themes/lowy/css/sass/_helper.scss
+++ b/wp-content/themes/lowy/css/sass/_helper.scss
@@ -89,7 +89,13 @@
         }
     }
 }
-
+@media screen and (min-width: 768px) {
+    .single-page-template--content {
+        .breadcrumbs {
+            opacity: 1;
+        }
+    }
+}
 @media screen and (min-width: 1024px) {
     .display {
         &--desktop {
